KoordFE/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    WS
    PASS
    MAP

Grammar

Rule 0     S' -> program
Rule 1     program -> agent modules awdecls ardecls locdecls stagedecl init events Numdecl
Rule 2     Numdecl -> NUM INUM NL
Rule 3     stagedecl -> DEF STAGE LCURLY stagelist RCURLY NL
Rule 4     stagedecl -> empty
Rule 5     stagelist -> LID COMMA stagelist
Rule 6     stagelist -> LID
Rule 7     agent -> AGENT CID NL
Rule 8     modules -> module modules
Rule 9     modules -> empty
Rule 10    module -> USING MODULE CID COLON NL INDENT actuatordecls sensordecls DEDENT
Rule 11    actuatordecls -> ACTUATORS COLON NL INDENT decls DEDENT
Rule 12    actuatordecls -> empty
Rule 13    sensordecls -> SENSORS COLON NL INDENT decls DEDENT
Rule 14    sensordecls -> empty
Rule 15    awdecls -> ALLWRITE COLON NL INDENT decls DEDENT
Rule 16    awdecls -> empty
Rule 17    ardecls -> ALLREAD COLON NL INDENT rvdecls DEDENT
Rule 18    ardecls -> empty
Rule 19    locdecls -> LOCAL COLON NL INDENT decls DEDENT
Rule 20    locdecls -> empty
Rule 21    decls -> decl decls
Rule 22    decls -> empty
Rule 23    decl -> type varname ASGN exp NL
Rule 24    decl -> type varname NL
Rule 25    rvdecls -> rvdecl rvdecls
Rule 26    rvdecls -> empty
Rule 27    rvdecl -> type varname LBRACE owner RBRACE NL
Rule 28    owner -> TIMES
Rule 29    owner -> INUM
Rule 30    funccall -> varname LPAR args RPAR
Rule 31    args -> neargs
Rule 32    args -> noargs
Rule 33    noargs -> empty
Rule 34    neargs -> exp
Rule 35    neargs -> exp COMMA neargs
Rule 36    type -> INT
Rule 37    type -> STRING
Rule 38    type -> FLOAT
Rule 39    type -> IPOS
Rule 40    type -> BOOLEAN
Rule 41    type -> INPUTMAP
Rule 42    init -> INIT COLON NL INDENT stmts DEDENT
Rule 43    init -> empty
Rule 44    events -> event events
Rule 45    events -> event
Rule 46    event -> LID COLON NL INDENT PRE COLON cond NL effblock DEDENT
Rule 47    effblock -> EFF COLON NL INDENT stmts DEDENT
Rule 48    effblock -> EFF COLON stmt
Rule 49    cond -> LPAR cond AND cond RPAR
Rule 50    cond -> LPAR cond OR cond RPAR
Rule 51    cond -> LPAR cond op cond RPAR
Rule 52    cond -> LPAR NOT cond RPAR
Rule 53    cond -> exp
Rule 54    stmts -> stmt stmts
Rule 55    stmts -> stmt
Rule 56    stmt -> asgn
Rule 57    stmt -> wptstmt
Rule 58    stmt -> exit
Rule 59    stmt -> funccall NL
Rule 60    stmt -> modulefunccall NL
Rule 61    stmt -> ATOMIC COLON NL INDENT stmts DEDENT
Rule 62    stmt -> IF cond COLON NL INDENT stmts DEDENT elseblock
Rule 63    exit -> EXIT NL
Rule 64    modulefunccall -> CID LPAR args RPAR
Rule 65    elseblock -> ELSE COLON NL INDENT stmts DEDENT
Rule 66    elseblock -> empty
Rule 67    asgn -> varname ASGN exp NL
Rule 68    asgn -> stagechange
Rule 69    moduleflag -> CID
Rule 70    stagechange -> STAGE ASGN varname NL
Rule 71    wptstmt -> varname ASGN GETINPUT LPAR RPAR NL
Rule 72    exp -> bracketexp
Rule 73    exp -> exp PLUS exp
Rule 74    exp -> exp TIMES exp
Rule 75    exp -> exp MINUS exp
Rule 76    exp -> exp BY exp
Rule 77    exp -> varname
Rule 78    exp -> STAGE
Rule 79    exp -> bval
Rule 80    exp -> pid
Rule 81    exp -> LID LBRACE exp RBRACE
Rule 82    exp -> num
Rule 83    exp -> null
Rule 84    exp -> funccall
Rule 85    exp -> modulefunccall
Rule 86    bracketexp -> LPAR exp RPAR
Rule 87    bval -> TRUE
Rule 88    bval -> FALSE
Rule 89    num -> INUM
Rule 90    num -> FNUM
Rule 91    pid -> PID
Rule 92    varname -> LID
Rule 93    null -> NULL
Rule 94    op -> EQ
Rule 95    op -> NEQ
Rule 96    op -> GEQ
Rule 97    op -> LEQ
Rule 98    op -> GT
Rule 99    op -> LT
Rule 100   empty -> <empty>

Terminals, with rules where they appear

ACTUATORS            : 11
AGENT                : 7
ALLREAD              : 17
ALLWRITE             : 15
AND                  : 49
ASGN                 : 23 67 70 71
ATOMIC               : 61
BOOLEAN              : 40
BY                   : 76
CID                  : 7 10 64 69
COLON                : 10 11 13 15 17 19 42 46 46 47 48 61 62 65
COMMA                : 5 35
DEDENT               : 10 11 13 15 17 19 42 46 47 61 62 65
DEF                  : 3
EFF                  : 47 48
ELSE                 : 65
EQ                   : 94
EXIT                 : 63
FALSE                : 88
FLOAT                : 38
FNUM                 : 90
GEQ                  : 96
GETINPUT             : 71
GT                   : 98
IF                   : 62
INDENT               : 10 11 13 15 17 19 42 46 47 61 62 65
INIT                 : 42
INPUTMAP             : 41
INT                  : 36
INUM                 : 2 29 89
IPOS                 : 39
LBRACE               : 27 81
LCURLY               : 3
LEQ                  : 97
LID                  : 5 6 46 81 92
LOCAL                : 19
LPAR                 : 30 49 50 51 52 64 71 86
LT                   : 99
MAP                  : 
MINUS                : 75
MODULE               : 10
NEQ                  : 95
NL                   : 2 3 7 10 11 13 15 17 19 23 24 27 42 46 46 47 59 60 61 62 63 65 67 70 71
NOT                  : 52
NULL                 : 93
NUM                  : 2
OR                   : 50
PASS                 : 
PID                  : 91
PLUS                 : 73
PRE                  : 46
RBRACE               : 27 81
RCURLY               : 3
RPAR                 : 30 49 50 51 52 64 71 86
SENSORS              : 13
STAGE                : 3 70 78
STRING               : 37
TIMES                : 28 74
TRUE                 : 87
USING                : 10
WS                   : 
error                : 

Nonterminals, with rules where they appear

Numdecl              : 1
actuatordecls        : 10
agent                : 1
ardecls              : 1
args                 : 30 64
asgn                 : 56
awdecls              : 1
bracketexp           : 72
bval                 : 79
cond                 : 46 49 49 50 50 51 51 52 62
decl                 : 21
decls                : 11 13 15 19 21
effblock             : 46
elseblock            : 62
empty                : 4 9 12 14 16 18 20 22 26 33 43 66
event                : 44 45
events               : 1 44
exit                 : 58
exp                  : 23 34 35 53 67 73 73 74 74 75 75 76 76 81 86
funccall             : 59 84
init                 : 1
locdecls             : 1
module               : 8
moduleflag           : 
modulefunccall       : 60 85
modules              : 1 8
neargs               : 31 35
noargs               : 32
null                 : 83
num                  : 82
op                   : 51
owner                : 27
pid                  : 80
program              : 0
rvdecl               : 25
rvdecls              : 17 25
sensordecls          : 10
stagechange          : 68
stagedecl            : 1
stagelist            : 3 5
stmt                 : 48 54 55
stmts                : 42 47 54 61 62 65
type                 : 23 24 27
varname              : 23 24 27 30 67 70 71 77
wptstmt              : 57

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . agent modules awdecls ardecls locdecls stagedecl init events Numdecl
    (7) agent -> . AGENT CID NL

    AGENT           shift and go to state 1

    agent                          shift and go to state 2
    program                        shift and go to state 3

state 1

    (7) agent -> AGENT . CID NL

    CID             shift and go to state 4


state 2

    (1) program -> agent . modules awdecls ardecls locdecls stagedecl init events Numdecl
    (8) modules -> . module modules
    (9) modules -> . empty
    (10) module -> . USING MODULE CID COLON NL INDENT actuatordecls sensordecls DEDENT
    (100) empty -> .

    USING           shift and go to state 7
    ALLWRITE        reduce using rule 100 (empty -> .)
    ALLREAD         reduce using rule 100 (empty -> .)
    LOCAL           reduce using rule 100 (empty -> .)
    DEF             reduce using rule 100 (empty -> .)
    INIT            reduce using rule 100 (empty -> .)
    LID             reduce using rule 100 (empty -> .)

    module                         shift and go to state 5
    modules                        shift and go to state 6
    empty                          shift and go to state 8

state 3

    (0) S' -> program .



state 4

    (7) agent -> AGENT CID . NL

    NL              shift and go to state 9


state 5

    (8) modules -> module . modules
    (8) modules -> . module modules
    (9) modules -> . empty
    (10) module -> . USING MODULE CID COLON NL INDENT actuatordecls sensordecls DEDENT
    (100) empty -> .

    USING           shift and go to state 7
    ALLWRITE        reduce using rule 100 (empty -> .)
    ALLREAD         reduce using rule 100 (empty -> .)
    LOCAL           reduce using rule 100 (empty -> .)
    DEF             reduce using rule 100 (empty -> .)
    INIT            reduce using rule 100 (empty -> .)
    LID             reduce using rule 100 (empty -> .)

    modules                        shift and go to state 10
    empty                          shift and go to state 8
    module                         shift and go to state 5

state 6

    (1) program -> agent modules . awdecls ardecls locdecls stagedecl init events Numdecl
    (15) awdecls -> . ALLWRITE COLON NL INDENT decls DEDENT
    (16) awdecls -> . empty
    (100) empty -> .

    ALLWRITE        shift and go to state 12
    ALLREAD         reduce using rule 100 (empty -> .)
    LOCAL           reduce using rule 100 (empty -> .)
    DEF             reduce using rule 100 (empty -> .)
    INIT            reduce using rule 100 (empty -> .)
    LID             reduce using rule 100 (empty -> .)

    awdecls                        shift and go to state 11
    empty                          shift and go to state 13

state 7

    (10) module -> USING . MODULE CID COLON NL INDENT actuatordecls sensordecls DEDENT

    MODULE          shift and go to state 14


state 8

    (9) modules -> empty .

    ALLWRITE        reduce using rule 9 (modules -> empty .)
    ALLREAD         reduce using rule 9 (modules -> empty .)
    LOCAL           reduce using rule 9 (modules -> empty .)
    DEF             reduce using rule 9 (modules -> empty .)
    INIT            reduce using rule 9 (modules -> empty .)
    LID             reduce using rule 9 (modules -> empty .)


state 9

    (7) agent -> AGENT CID NL .

    USING           reduce using rule 7 (agent -> AGENT CID NL .)
    ALLWRITE        reduce using rule 7 (agent -> AGENT CID NL .)
    ALLREAD         reduce using rule 7 (agent -> AGENT CID NL .)
    LOCAL           reduce using rule 7 (agent -> AGENT CID NL .)
    DEF             reduce using rule 7 (agent -> AGENT CID NL .)
    INIT            reduce using rule 7 (agent -> AGENT CID NL .)
    LID             reduce using rule 7 (agent -> AGENT CID NL .)


state 10

    (8) modules -> module modules .

    ALLWRITE        reduce using rule 8 (modules -> module modules .)
    ALLREAD         reduce using rule 8 (modules -> module modules .)
    LOCAL           reduce using rule 8 (modules -> module modules .)
    DEF             reduce using rule 8 (modules -> module modules .)
    INIT            reduce using rule 8 (modules -> module modules .)
    LID             reduce using rule 8 (modules -> module modules .)


state 11

    (1) program -> agent modules awdecls . ardecls locdecls stagedecl init events Numdecl
    (17) ardecls -> . ALLREAD COLON NL INDENT rvdecls DEDENT
    (18) ardecls -> . empty
    (100) empty -> .

    ALLREAD         shift and go to state 15
    LOCAL           reduce using rule 100 (empty -> .)
    DEF             reduce using rule 100 (empty -> .)
    INIT            reduce using rule 100 (empty -> .)
    LID             reduce using rule 100 (empty -> .)

    ardecls                        shift and go to state 16
    empty                          shift and go to state 17

state 12

    (15) awdecls -> ALLWRITE . COLON NL INDENT decls DEDENT

    COLON           shift and go to state 18


state 13

    (16) awdecls -> empty .

    ALLREAD         reduce using rule 16 (awdecls -> empty .)
    LOCAL           reduce using rule 16 (awdecls -> empty .)
    DEF             reduce using rule 16 (awdecls -> empty .)
    INIT            reduce using rule 16 (awdecls -> empty .)
    LID             reduce using rule 16 (awdecls -> empty .)


state 14

    (10) module -> USING MODULE . CID COLON NL INDENT actuatordecls sensordecls DEDENT

    CID             shift and go to state 19


state 15

    (17) ardecls -> ALLREAD . COLON NL INDENT rvdecls DEDENT

    COLON           shift and go to state 20


state 16

    (1) program -> agent modules awdecls ardecls . locdecls stagedecl init events Numdecl
    (19) locdecls -> . LOCAL COLON NL INDENT decls DEDENT
    (20) locdecls -> . empty
    (100) empty -> .

    LOCAL           shift and go to state 22
    DEF             reduce using rule 100 (empty -> .)
    INIT            reduce using rule 100 (empty -> .)
    LID             reduce using rule 100 (empty -> .)

    locdecls                       shift and go to state 21
    empty                          shift and go to state 23

state 17

    (18) ardecls -> empty .

    LOCAL           reduce using rule 18 (ardecls -> empty .)
    DEF             reduce using rule 18 (ardecls -> empty .)
    INIT            reduce using rule 18 (ardecls -> empty .)
    LID             reduce using rule 18 (ardecls -> empty .)


state 18

    (15) awdecls -> ALLWRITE COLON . NL INDENT decls DEDENT

    NL              shift and go to state 24


state 19

    (10) module -> USING MODULE CID . COLON NL INDENT actuatordecls sensordecls DEDENT

    COLON           shift and go to state 25


state 20

    (17) ardecls -> ALLREAD COLON . NL INDENT rvdecls DEDENT

    NL              shift and go to state 26


state 21

    (1) program -> agent modules awdecls ardecls locdecls . stagedecl init events Numdecl
    (3) stagedecl -> . DEF STAGE LCURLY stagelist RCURLY NL
    (4) stagedecl -> . empty
    (100) empty -> .

    DEF             shift and go to state 29
    INIT            reduce using rule 100 (empty -> .)
    LID             reduce using rule 100 (empty -> .)

    stagedecl                      shift and go to state 28
    empty                          shift and go to state 27

state 22

    (19) locdecls -> LOCAL . COLON NL INDENT decls DEDENT

    COLON           shift and go to state 30


state 23

    (20) locdecls -> empty .

    DEF             reduce using rule 20 (locdecls -> empty .)
    INIT            reduce using rule 20 (locdecls -> empty .)
    LID             reduce using rule 20 (locdecls -> empty .)


state 24

    (15) awdecls -> ALLWRITE COLON NL . INDENT decls DEDENT

    INDENT          shift and go to state 31


state 25

    (10) module -> USING MODULE CID COLON . NL INDENT actuatordecls sensordecls DEDENT

    NL              shift and go to state 32


state 26

    (17) ardecls -> ALLREAD COLON NL . INDENT rvdecls DEDENT

    INDENT          shift and go to state 33


state 27

    (4) stagedecl -> empty .

    INIT            reduce using rule 4 (stagedecl -> empty .)
    LID             reduce using rule 4 (stagedecl -> empty .)


state 28

    (1) program -> agent modules awdecls ardecls locdecls stagedecl . init events Numdecl
    (42) init -> . INIT COLON NL INDENT stmts DEDENT
    (43) init -> . empty
    (100) empty -> .

    INIT            shift and go to state 34
    LID             reduce using rule 100 (empty -> .)

    init                           shift and go to state 35
    empty                          shift and go to state 36

state 29

    (3) stagedecl -> DEF . STAGE LCURLY stagelist RCURLY NL

    STAGE           shift and go to state 37


state 30

    (19) locdecls -> LOCAL COLON . NL INDENT decls DEDENT

    NL              shift and go to state 38


state 31

    (15) awdecls -> ALLWRITE COLON NL INDENT . decls DEDENT
    (21) decls -> . decl decls
    (22) decls -> . empty
    (23) decl -> . type varname ASGN exp NL
    (24) decl -> . type varname NL
    (100) empty -> .
    (36) type -> . INT
    (37) type -> . STRING
    (38) type -> . FLOAT
    (39) type -> . IPOS
    (40) type -> . BOOLEAN
    (41) type -> . INPUTMAP

    DEDENT          reduce using rule 100 (empty -> .)
    INT             shift and go to state 42
    STRING          shift and go to state 40
    FLOAT           shift and go to state 43
    IPOS            shift and go to state 44
    BOOLEAN         shift and go to state 45
    INPUTMAP        shift and go to state 41

    decl                           shift and go to state 39
    decls                          shift and go to state 47
    type                           shift and go to state 46
    empty                          shift and go to state 48

state 32

    (10) module -> USING MODULE CID COLON NL . INDENT actuatordecls sensordecls DEDENT

    INDENT          shift and go to state 49


state 33

    (17) ardecls -> ALLREAD COLON NL INDENT . rvdecls DEDENT
    (25) rvdecls -> . rvdecl rvdecls
    (26) rvdecls -> . empty
    (27) rvdecl -> . type varname LBRACE owner RBRACE NL
    (100) empty -> .
    (36) type -> . INT
    (37) type -> . STRING
    (38) type -> . FLOAT
    (39) type -> . IPOS
    (40) type -> . BOOLEAN
    (41) type -> . INPUTMAP

    DEDENT          reduce using rule 100 (empty -> .)
    INT             shift and go to state 42
    STRING          shift and go to state 40
    FLOAT           shift and go to state 43
    IPOS            shift and go to state 44
    BOOLEAN         shift and go to state 45
    INPUTMAP        shift and go to state 41

    rvdecl                         shift and go to state 50
    rvdecls                        shift and go to state 51
    type                           shift and go to state 52
    empty                          shift and go to state 53

state 34

    (42) init -> INIT . COLON NL INDENT stmts DEDENT

    COLON           shift and go to state 54


state 35

    (1) program -> agent modules awdecls ardecls locdecls stagedecl init . events Numdecl
    (44) events -> . event events
    (45) events -> . event
    (46) event -> . LID COLON NL INDENT PRE COLON cond NL effblock DEDENT

    LID             shift and go to state 55

    event                          shift and go to state 56
    events                         shift and go to state 57

state 36

    (43) init -> empty .

    LID             reduce using rule 43 (init -> empty .)


state 37

    (3) stagedecl -> DEF STAGE . LCURLY stagelist RCURLY NL

    LCURLY          shift and go to state 58


state 38

    (19) locdecls -> LOCAL COLON NL . INDENT decls DEDENT

    INDENT          shift and go to state 59


state 39

    (21) decls -> decl . decls
    (21) decls -> . decl decls
    (22) decls -> . empty
    (23) decl -> . type varname ASGN exp NL
    (24) decl -> . type varname NL
    (100) empty -> .
    (36) type -> . INT
    (37) type -> . STRING
    (38) type -> . FLOAT
    (39) type -> . IPOS
    (40) type -> . BOOLEAN
    (41) type -> . INPUTMAP

    DEDENT          reduce using rule 100 (empty -> .)
    INT             shift and go to state 42
    STRING          shift and go to state 40
    FLOAT           shift and go to state 43
    IPOS            shift and go to state 44
    BOOLEAN         shift and go to state 45
    INPUTMAP        shift and go to state 41

    decl                           shift and go to state 39
    decls                          shift and go to state 60
    type                           shift and go to state 46
    empty                          shift and go to state 48

state 40

    (37) type -> STRING .

    LID             reduce using rule 37 (type -> STRING .)


state 41

    (41) type -> INPUTMAP .

    LID             reduce using rule 41 (type -> INPUTMAP .)


state 42

    (36) type -> INT .

    LID             reduce using rule 36 (type -> INT .)


state 43

    (38) type -> FLOAT .

    LID             reduce using rule 38 (type -> FLOAT .)


state 44

    (39) type -> IPOS .

    LID             reduce using rule 39 (type -> IPOS .)


state 45

    (40) type -> BOOLEAN .

    LID             reduce using rule 40 (type -> BOOLEAN .)


state 46

    (23) decl -> type . varname ASGN exp NL
    (24) decl -> type . varname NL
    (92) varname -> . LID

    LID             shift and go to state 61

    varname                        shift and go to state 62

state 47

    (15) awdecls -> ALLWRITE COLON NL INDENT decls . DEDENT

    DEDENT          shift and go to state 63


state 48

    (22) decls -> empty .

    DEDENT          reduce using rule 22 (decls -> empty .)


state 49

    (10) module -> USING MODULE CID COLON NL INDENT . actuatordecls sensordecls DEDENT
    (11) actuatordecls -> . ACTUATORS COLON NL INDENT decls DEDENT
    (12) actuatordecls -> . empty
    (100) empty -> .

    ACTUATORS       shift and go to state 64
    SENSORS         reduce using rule 100 (empty -> .)
    DEDENT          reduce using rule 100 (empty -> .)

    actuatordecls                  shift and go to state 65
    empty                          shift and go to state 66

state 50

    (25) rvdecls -> rvdecl . rvdecls
    (25) rvdecls -> . rvdecl rvdecls
    (26) rvdecls -> . empty
    (27) rvdecl -> . type varname LBRACE owner RBRACE NL
    (100) empty -> .
    (36) type -> . INT
    (37) type -> . STRING
    (38) type -> . FLOAT
    (39) type -> . IPOS
    (40) type -> . BOOLEAN
    (41) type -> . INPUTMAP

    DEDENT          reduce using rule 100 (empty -> .)
    INT             shift and go to state 42
    STRING          shift and go to state 40
    FLOAT           shift and go to state 43
    IPOS            shift and go to state 44
    BOOLEAN         shift and go to state 45
    INPUTMAP        shift and go to state 41

    rvdecl                         shift and go to state 50
    rvdecls                        shift and go to state 67
    type                           shift and go to state 52
    empty                          shift and go to state 53

state 51

    (17) ardecls -> ALLREAD COLON NL INDENT rvdecls . DEDENT

    DEDENT          shift and go to state 68


state 52

    (27) rvdecl -> type . varname LBRACE owner RBRACE NL
    (92) varname -> . LID

    LID             shift and go to state 61

    varname                        shift and go to state 69

state 53

    (26) rvdecls -> empty .

    DEDENT          reduce using rule 26 (rvdecls -> empty .)


state 54

    (42) init -> INIT COLON . NL INDENT stmts DEDENT

    NL              shift and go to state 70


state 55

    (46) event -> LID . COLON NL INDENT PRE COLON cond NL effblock DEDENT

    COLON           shift and go to state 71


state 56

    (44) events -> event . events
    (45) events -> event .
    (44) events -> . event events
    (45) events -> . event
    (46) event -> . LID COLON NL INDENT PRE COLON cond NL effblock DEDENT

    NUM             reduce using rule 45 (events -> event .)
    LID             shift and go to state 55

    event                          shift and go to state 56
    events                         shift and go to state 72

state 57

    (1) program -> agent modules awdecls ardecls locdecls stagedecl init events . Numdecl
    (2) Numdecl -> . NUM INUM NL

    NUM             shift and go to state 74

    Numdecl                        shift and go to state 73

state 58

    (3) stagedecl -> DEF STAGE LCURLY . stagelist RCURLY NL
    (5) stagelist -> . LID COMMA stagelist
    (6) stagelist -> . LID

    LID             shift and go to state 75

    stagelist                      shift and go to state 76

state 59

    (19) locdecls -> LOCAL COLON NL INDENT . decls DEDENT
    (21) decls -> . decl decls
    (22) decls -> . empty
    (23) decl -> . type varname ASGN exp NL
    (24) decl -> . type varname NL
    (100) empty -> .
    (36) type -> . INT
    (37) type -> . STRING
    (38) type -> . FLOAT
    (39) type -> . IPOS
    (40) type -> . BOOLEAN
    (41) type -> . INPUTMAP

    DEDENT          reduce using rule 100 (empty -> .)
    INT             shift and go to state 42
    STRING          shift and go to state 40
    FLOAT           shift and go to state 43
    IPOS            shift and go to state 44
    BOOLEAN         shift and go to state 45
    INPUTMAP        shift and go to state 41

    decl                           shift and go to state 39
    decls                          shift and go to state 77
    type                           shift and go to state 46
    empty                          shift and go to state 48

state 60

    (21) decls -> decl decls .

    DEDENT          reduce using rule 21 (decls -> decl decls .)


state 61

    (92) varname -> LID .

    ASGN            reduce using rule 92 (varname -> LID .)
    LPAR            reduce using rule 92 (varname -> LID .)
    NL              reduce using rule 92 (varname -> LID .)
    LBRACE          reduce using rule 92 (varname -> LID .)


state 62

    (23) decl -> type varname . ASGN exp NL
    (24) decl -> type varname . NL

    ASGN            shift and go to state 79
    NL              shift and go to state 78


state 63

    (15) awdecls -> ALLWRITE COLON NL INDENT decls DEDENT .
